--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>Hello Git</h1>
+    <h1>Hello Git, Hola git</h1>
     <script src="./index.js"></script>
   </body>
 </html>
